feat: add (hacky) support for config and secrets (#777)
This currently loads from environment variables
`FTL_{CONFIG,SECRET}_<MODULE>_<KEY>`, which will eventually be delivered
by the Runner.

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>